--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,11 +28,9 @@
         <p class="or-text">or</p>
         <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
         <%# end %>
-  <% end %>
-
-    <% unless user_signed_in? && current_user.id == @item.user_id %>
+    <% else %>
       <%if user_signed_in? %>
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+      <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
       <% end %>
     <% end %>
 
