条件分岐変更

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,14 +24,13 @@
     </div>
     <% if user_signed_in? && current_user.id == @item.user_id %>
         <%# unless @items.present? %>
+        <%# 購入機能実装時にコメントを外す。購入されたら出品者は編集、削除ができないようにするため%>
         <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
         <%# end %>
-    <% else %>
-      <%if user_signed_in? %>
+    <% elsif user_signed_in? %>
       <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-      <% end %>
     <% end %>
 
     <div class="item-explain-box">
