--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -27,7 +27,7 @@
         <%# "購入機能実装時にコメントを外す。購入されたら出品者は編集、削除ができないようにするため" %>
         <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
-        <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
+        <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
         <%# end %>
     <% elsif user_signed_in? %>
       <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
