--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# if item.order.present? %>
+      <% if @item.order.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <%# end %>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -22,14 +22,11 @@
         <%= @item.delivery_change.name %>
       </span>
     </div>
-    <% if user_signed_in? && current_user.id == @item.user_id %>
-        <%# unless @items.present? %>
-        <%# "購入機能実装時にコメントを外す。購入されたら出品者は編集、削除ができないようにするため" %>
+    <% if user_signed_in? && current_user.id == @item.user_id &&@item.order.blank?%>
         <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
-        <%# end %>
-    <% elsif user_signed_in? %>
+    <% elsif user_signed_in? && @item.order.blank?%>
       <%= link_to "購入画面に進む", "/items/#{@item.id}/orders",method: :get, class:"item-red-btn"%>
     <% end %>
 
