--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -22,12 +22,14 @@
         <%= @item.delivery_change.name %>
       </span>
     </div>
-    <% if user_signed_in? && current_user.id == @item.user_id &&@item.order.blank?%>
+    <% if user_signed_in? && @item.order.blank?%>
+      <%if current_user.id == @item.user_id %>
         <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
-    <% elsif user_signed_in? && @item.order.blank?%>
-      <%= link_to "購入画面に進む", "/items/#{@item.id}/orders",method: :get, class:"item-red-btn"%>
+      <% else %>
+      <%= link_to "購入画面に進む",  item_orders_path(@item.id) ,method: :get, class:"item-red-btn"%>
+      <%end%>
     <% end %>
 
     <div class="item-explain-box">
